docs: BENCH.md: the measurement contract in short, the harness as bench/ has it
Keeps the frozen reporting contract (standards, categories, statistics, host, fairness, reproducibility, honesty, the report sentence; R19, R37) at section numbers the code cites (§2, §3, §4) and PLAN cites (§11), and states up front that claims rest only on ReleaseFast measurements and that no comparison is published before real same-machine numbers. Drops the seven-day and external-review ceremony (§9) and the test/bench/ and bench/<name>.nx source paths, neither of which exists (M27). §10 describes the harness from src/bench.zig, bench/main.zig, bench/nextomic.zig and build.zig's bench step: bin/nexis-bench, the --out, --note and --filter flags, exit 2 on an unknown flag or category, every category with its row names, the sampling method, and the table and JSON formats.